
* docutils/MANIFEST.in

  - Exclude test outputs.

* docutils/__init__.py

  - VersionInfo: ValueError for invalid values, fix comparison to tuples.

* docutils/nodes.py

  - Apply patch #165: Fix error when copying `system_message` node
    (by Takeshi KOMIYA).
  - Apply version of patch #167: Let document.set_id() register all
    existing IDs (thanks to Takeshi KOMIYA).

* docutils/parsers/rst/directives/body.py:

  - Make the sidebar's "title" argument optional (feature request #69).

* docutils/parsers/rst/directives/misc.py:

  - Prevent infinite inclusion loops.

* docutils/utils/smartquotes.py

  - Fix bug #383: Smart quotes around opening and separator characters.

* docutils/writers/html5_polyglot/

  - Use the new semantic tags <main>, <section>, <header>,
    <footer>, <aside>, <figure>, and <figcaption>.
    See ``minimal.css`` and ``plain.css`` for styling rule examples.

    Change the `initial_header_level` setting default to "2", as browsers
    use the `same style for <h1> and <h2> when nested in a <section>`__.

    __ https://stackoverflow.com/questions/39547412/same-font-size-for-h1-and-h2-in-article

  - Use HTML text-level tags <small>, <s>, <q>, <dfn>, <var>, <samp>, <kbd>,
    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.
    Use <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

  - Wrap block-level image elements in <p> (except for figures).
    Move non-essential styling from ``minimal.css`` to ``plain.css``.
    Support numbered figures in ``plain.css``.

  - Fix bug #398: properly close link tag to "schema.dcterms".

* docutils/writers/latex2e/__init__.py:

  - Use LaTeX environments for admonitions and "class wrappers" for styling
    admonitions and titles if the new configuration setting
    `legacy_class_functions`_ is False.

    .. _legacy_class_functions: docs/user/config.html#legacy-class-functions

